non_executable_reasons_record_from_random_10k/302.txt
3.6
An error occurred while executing the following cell:
------------------
%matplotlib inline
%reset -f

from __future__ import print_function
from ipywidgets import interact, interactive, fixed, interact_manual
import ipywidgets as widgets

import matplotlib.pyplot as plt
import pandas as pd
import numpy as np
from scipy import stats
------------------

[0;36m  File [0;32m"<ipython-input-2-c67c6b09ec60>"[0;36m, line [0;32m7[0m
[0;31m    [0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m from __future__ imports must occur at the beginning of the file

SyntaxError: from __future__ imports must occur at the beginning of the file (<ipython-input-2-c67c6b09ec60>, line 7)

Executability                            : False
